fix: moved overflow styles to operations.scss

--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -316,12 +316,6 @@
             padding: 0 10px 0 0;
         }
     }
-
-    .parameters .body-param 
-    {
-        overflow-x: scroll;
-        overflow-y: auto;
-    }
 }
 
 .filter
